# simple-fileserver

./: .gitignore  Readme.md  pyproject.toml  server.py
templates/: files.html
